--- a/index.html
+++ b/index.html
@@ -1495,52 +1495,52 @@ ensuring error-free delivery through cross-functional collaboration with marketi
             <div class="partners-grid">
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="saga-logo.png" alt="SAGA Translations" class="partner-logo">
+                        <img src="assets/icons/saga_logo.webp" alt="SAGA Translations" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="tw-logo.png" alt="TW Business Content" class="partner-logo">
+                        <img src="assets/icons/tw-logo.png" alt="TW Business Content" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="tabuleiro-filmes.png" alt="Tabuleiro Filmes" class="partner-logo">
+                        <img src="assets/icons/tabuleiro-filmes.png" alt="Tabuleiro Filmes" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="iyuno-logo.png" alt="Iyuno SDI Group" class="partner-logo">
+                        <img src="assets/icons/iyuno-logo.png" alt="Iyuno SDI Group" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="itc-global-logo.png" alt="ITC Global" class="partner-logo">
+                        <img src="assets/icons/itc-global-logo.png" alt="ITC Global" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="acclaro-logo.png" alt="Acclaro" class="partner-logo">
+                        <img src="assets/icons/acclaro-logo.png" alt="Acclaro" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="moshi-media-logo.png" alt="Moshi Media" class="partner-logo">
+                        <img src="assets/icons/moshi-media-logo.png" alt="Moshi Media" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="tikinet-logo.png" alt="Tikinet" class="partner-logo">
+                        <img src="assets/icons/tikinet-logo.png" alt="Tikinet" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="claro-logo.png" alt="Claro" class="partner-logo">
+                        <img src="assets/icons/claro-logo.png" alt="Claro" class="partner-logo">
                     </div>
                 </div>
                 <div class="partner-item">
                     <div class="partner-logo-container">
-                        <img src="vsi-vox-mundi-logo.png" alt="VSI VOX MUNDI" class="partner-logo">
+                        <img src="assets/icons/vsi-vox-mundi-logo.png" alt="VSI VOX MUNDI" class="partner-logo">
                     </div>
                 </div>
             </div>
