--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@ font-size: 2.5rem;
     <div class="impact-grid">
       <div class="impact-card">
         <div class="impact-header">
-          <div class="impact-img-placeholder"><img src="C:\Users\Dell\Downloads\web-design.png"</img></div>
+          <div class="impact-img-placeholder"><img src="assets/icons/content-editing.png"</img></div>
           <div class="impact-texts">
             <h3 class="impact-title">Content Editing and Publishing</h3><br>
             <p class="impact-desc">Implementing design workflows into flawless WordPress experiences—ensuring grammar, tone, semantic HTML, accessibility, and pixel-perfect Figma alignment for landing pages and articles.</p>
@@ -1455,7 +1455,7 @@ font-size: 2.5rem;
 
       <div class="impact-card">
         <div class="impact-header">
-          <div class="impact-img-placeholder"><img src="C:\Users\Dell\Downloads\quality-control.png"></img></div>
+          <div class="impact-img-placeholder"><img src="assets/icons/quality-control.png"></img></div>
           <div class="impact-texts">
             <h3 class="impact-title">QA-Driven Publishing Pipelines</h3><br>
             <p class="impact-desc">Coordinating high-volume publishing with rigorous QA protocols—
@@ -1467,7 +1467,7 @@ ensuring error-free delivery through cross-functional collaboration with marketi
 
       <div class="impact-card">
         <div class="impact-header">
-          <div class="impact-img-placeholder"><img src="C:\Users\Dell\Downloads\seo.png"></img></div>
+          <div class="impact-img-placeholder"><img src="assets/icons/seo.png"></img></div>
           <div class="impact-texts">
             <h3 class="impact-title">SEO and Performance Optimization</h3><br>
             <p class="impact-desc">Executing on-page SEO edits, A/B testing, and performance tracking—driving organic growth and engagement through accurate, measurable results with marketing input.</p>
@@ -1478,7 +1478,7 @@ ensuring error-free delivery through cross-functional collaboration with marketi
 
       <div class="impact-card">
         <div class="impact-header">
-          <div class="impact-img-placeholder"><img src="C:\Users\Dell\Downloads\6572257_ai_creative_education_idea_knowledge_icon.png"></img></div>
+          <div class="impact-img-placeholder"><img src="assets/icons/ai-assisted.png"></img></div>
           <div class="impact-texts">
             <h3 class="impact-title">AI-Assisted Editorial Governance</h3><br>
             <p class="impact-desc">Integrating AI tools to boost efficiency for scalable content operations—bridging automation and human touch to maintain compliance standards in key publishing environments.</p>
